# diarized_transcriber

./: .gitignore  .trivyignore  Jenkinsfile  LICENSE  README.md  pyproject.toml
deploy/: Dockerfile  ansible-deploy.yml  diarized-transcriber.container  gpu_common-0.1.0-py3-none-any.whl
src/diarized_transcriber/: __init__.py  config.py  exceptions.py  types.py
src/diarized_transcriber/api/: backend.py  fingerprint_routes.py  schemas.py  server.py  speaker_routes.py  speaker_schemas.py
src/diarized_transcriber/identification/: __init__.py  matcher.py
src/diarized_transcriber/models/: content.py  speaker_profile.py  transcription.py
src/diarized_transcriber/storage/: __init__.py  speaker_store.py
src/diarized_transcriber/transcription/: audio.py  diarization.py  embeddings.py  engine.py  gpu.py
src/diarized_transcriber/utils/: formatting.py
tests/: test_config.py
tests/api/: test_backend.py  test_server.py  test_speaker_routes.py  test_v1_transcribe.py
tests/identification/: test_matcher.py
tests/models/: test_speaker_profile.py  test_transcription.py
tests/storage/: test_speaker_store.py
tests/transcription/: test_audio.py  test_diarization.py  test_embeddings.py  test_engine.py  test_gpu.py
tests/utils/: test_formatting.py
