[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diarized_transcriber"
version = "0.1.0"
description = "A library for transcribing media content with speaker diarization"
readme = "README.md"
authors = [
    { name = "Eddie Dunn", email = "eddie@eddiedunn.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = [
    "transcription",
    "diarization",
    "speaker-diarization",
    "whisperx",
    "audio",
    "speech-to-text",
    "speaker-identification",
    "speaker-recognition",
    "pyannote",
    "voice-fingerprinting",
]
dependencies = [
    "pydantic>=2.0.0",
    "whisperx>=3.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "faster-whisper>=1.0.0",
    "ctranslate2>=4.0.0",
    "transformers>=4.36.0",
    "pandas>=2.0.0",
    "setuptools>=68.0.0",
    "nltk>=3.8.0",
    "pyannote.audio>=3.1.0",
    "soundfile>=0.12.0",
]
requires-python = ">=3.10.0"

[project.urls]
Homepage = "https://github.com/eddiedunn/diarized_transcriber"
Repository = "https://github.com/eddiedunn/diarized_transcriber"
Issues = "https://github.com/eddiedunn/diarized_transcriber/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff",
]
server = [
    "fastapi",
    "uvicorn"
]
profiles = [
    "lancedb>=0.15.0",
    "scipy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/diarized_transcriber"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
target-version = "py310"